Overflow Fix

--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 .header {
   padding: calc(var(--gutter) * var(--header-shade-padding)) 0;
-  width: 100%;
+  width: 98%;
   position: relative;
   z-index: var(--z-index-header);
 }
